# MutView

./: .gitignore  LICENSE  MutView.py  README.md  cute_mut_view.py  dear_seq.py  pyproject.toml  test_2_25466919.html
.github/workflows/: python-ci-release.yml  python-ci.yml  release.yml
src/mutview/: process.py  utils.py
tests/: ref.fa  ref.fa.fai  test.bam  test.bam.bai  test.sh  test_mutview.py  test_out.html
