[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mutview"
version = "0.0.1"
authors = [
  { name="Li Teng", email="707704459@qq.com" },
]
description = "A command tool to view reads over a loci from bam file, like a lightweigth IGV"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pysam"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.gui-scripts]
mutview = "mutview.process:main"

[project.urls]
Homepage = "https://github.com/TuBieJun/MutView"
Issues = "https://github.com/TuBieJun/MutView/issues"